@@ -7,6 +7,10 @@ Changes for APR 1.1 [Deferring these features when 1.0 is rolled out.]
 
 Changes with APR 1.0
 
+  *) Return an error instead of silently failing when apr_poll() is
+     used with file descriptors >= FD_SETSIZE.  (Unix systems with
+     no native poll())  [Jeff Trawick, Brad Nicholes]
+
   *) new error status APR_STATUS_IS_ENOTENOUGHENTROPY, Doxygen fixes
      [Sander Temme <sander at temme dot net]
 
